Inicio utilização Random Forest, seleção de features e validação cruzada

--- a/TCC.ipynb
+++ b/TCC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/S+bC1dU8kmUHklfriJYC",
+      "authorship_tag": "ABX9TyNgz5fQglbG7AO1qV8Vznq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,106 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/BrunaCFerreiraAzevedo/PredicaoFraude/blob/V1/TCC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**UTILIZANDO RANDOM FOREST**"
+      ],
+      "metadata": {
+        "id": "zdnvnE7jACAu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Importando bibliotecas de treino\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.feature_selection import SelectKBest, f_classif\n",
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd\n",
+        "!pip install opendatasets --upgrade --quiet\n",
+        "\n",
+        "import opendatasets as od\n",
+        "download_url = 'https://www.kaggle.com/datasets/jainilcoder/online-payment-fraud-detection'\n",
+        "od.download(download_url)\n",
+        "\n",
+        "\n",
+        "df= pd.read_csv('./online-payment-fraud-detection/onlinefraud.csv')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1aaN3oQs_LjJ",
+        "outputId": "37e2bf11-bf36-42d3-be6b-617c7a3ca44f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping, found downloaded files in \"./online-payment-fraud-detection\" (use force=True to force download)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Codificar variáveis categóricas\n",
+        "df = pd.get_dummies(df, columns=['type'], drop_first=True)\n",
+        "\n",
+        "#Objetivo é a predição da coluna IsFraud\n",
+        "X = df.drop(['nameOrig', 'nameDest', 'isFraud', 'isFlaggedFraud'], axis=1)\n",
+        "y = df['isFraud']\n",
+        "\n",
+        "# Seleciona as melhores características\n",
+        "k = 7\n",
+        "selector = SelectKBest(score_func=f_classif, k=k)\n",
+        "X_new = selector.fit_transform(X, y)\n",
+        "selected_features = X.columns[selector.get_support()]\n",
+        "\n",
+        "print(f\"Scores das features: {selected_features}\")\n",
+        "print(selector.scores_)\n",
+        "\n",
+        "#Validação cruzada da seleção de features3\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1F8C7g5LBLop",
+        "outputId": "4f4fe1f0-d17e-4386-e58f-29952275cc7d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Scores das features: Index(['step', 'amount', 'oldbalanceOrg', 'newbalanceOrig', 'type_CASH_OUT',\n",
+            "       'type_PAYMENT', 'type_TRANSFER'],\n",
+            "      dtype='object')\n",
+            "[6.35077161e+03 3.76406580e+04 6.56131724e+02 4.22458368e+02\n",
+            " 2.20386451e+02 1.82350447e+00 8.06183706e+02 5.39018306e+01\n",
+            " 4.20428096e+03 1.85171890e+04]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**UTILIZANDO MÉTODOS PREDITIVOS**"
+      ],
+      "metadata": {
+        "id": "ECcVauO8BMTl"
+      }
     },
     {
       "cell_type": "code",
