--- a/AnaliseExploratoria.ipynb
+++ b/AnaliseExploratoria.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 565
         },
         "id": "t3gK_hHa558e",
-        "outputId": "0cc924fb-e4e4-4ad8-af51-4f4bbceec997"
+        "outputId": "043f3c31-752f-411e-8ff8-f645e1cc168b"
       },
       "outputs": [
         {
@@ -52,7 +52,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 178M/178M [00:01<00:00, 111MB/s]\n"
+            "100%|██████████| 178M/178M [00:09<00:00, 20.6MB/s]\n"
           ]
         },
         {
@@ -109,7 +109,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-87b52c6c-ece7-4db1-9cf4-e9be0529b8df\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-085d1d5b-4049-49df-a649-f8715bfb4338\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -303,7 +303,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-87b52c6c-ece7-4db1-9cf4-e9be0529b8df')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-085d1d5b-4049-49df-a649-f8715bfb4338')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -355,12 +355,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-87b52c6c-ece7-4db1-9cf4-e9be0529b8df button.colab-df-convert');\n",
+              "        document.querySelector('#df-085d1d5b-4049-49df-a649-f8715bfb4338 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-87b52c6c-ece7-4db1-9cf4-e9be0529b8df');\n",
+              "        const element = document.querySelector('#df-085d1d5b-4049-49df-a649-f8715bfb4338');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -380,8 +380,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f861feb5-aa76-40ec-8666-6474d93c62c0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f861feb5-aa76-40ec-8666-6474d93c62c0')\"\n",
+              "<div id=\"df-fb1f221e-8382-439c-b530-1f47a57e0f05\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fb1f221e-8382-439c-b530-1f47a57e0f05')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -500,14 +500,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f861feb5-aa76-40ec-8666-6474d93c62c0 button');\n",
+              "        document.querySelector('#df-fb1f221e-8382-439c-b530-1f47a57e0f05 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_42b208fd-e852-4b60-8813-fbab4b6e08b8\">\n",
+              "  <div id=\"id_a5d7fee8-99d1-42a6-89d8-fb27ee176a1a\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -551,7 +551,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_42b208fd-e852-4b60-8813-fbab4b6e08b8 button.colab-df-generate');\n",
+              "        document.querySelector('#id_a5d7fee8-99d1-42a6-89d8-fb27ee176a1a button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -571,7 +571,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -616,9 +616,9 @@
           "height": 422
         },
         "id": "DvW5lSNW9qUD",
-        "outputId": "9bc06de1-63a1-49d1-e862-781cf6ac2ec2"
+        "outputId": "4ec9a460-ab94-4ec6-9436-826fe6f30ba0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1776,37 +1776,23 @@
       ],
       "metadata": {
         "id": "DQRaTQLiFrOa",
-        "outputId": "505feff6-692c-45b6-8cc7-9ee60a4f800e",
+        "outputId": "17d1edce-160d-40da-f972-eb7f957e9daa",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         }
       },
-      "execution_count": 30,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   step      type    amount     nameOrig  oldbalanceOrg  newbalanceOrig  \\\n",
-            "0     1   PAYMENT   9839.64  C1231006815       170136.0       160296.36   \n",
-            "1     1   PAYMENT   1864.28  C1666544295        21249.0        19384.72   \n",
-            "2     1  TRANSFER    181.00  C1305486145          181.0            0.00   \n",
-            "3     1  CASH_OUT    181.00   C840083671          181.0            0.00   \n",
-            "4     1   PAYMENT  11668.14  C2048537720        41554.0        29885.86   \n",
-            "\n",
-            "      nameDest  oldbalanceDest  newbalanceDest  isFraud  isFlaggedFraud  day  \\\n",
-            "0  M1979787155             0.0             0.0        0               0    1   \n",
-            "1  M2044282225             0.0             0.0        0               0    1   \n",
-            "2   C553264065             0.0             0.0        1               0    1   \n",
-            "3    C38997010         21182.0             0.0        1               0    1   \n",
-            "4  M1230701703             0.0             0.0        0               0    1   \n",
-            "\n",
-            "   hour typeDest  emptyAccount  \n",
-            "0    23        M         False  \n",
-            "1    23        M         False  \n",
-            "2    23        C          True  \n",
-            "3    23        C          True  \n",
-            "4    23        M         False  \n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'df' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-e5698638c199>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Criar a coluna 'day' calculando os dias a partir de 'step' (considerando 24 horas por dia)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'day'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'step'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Criar a coluna 'hour', que calcula as horas restantes no dia a partir de 'step'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
           ]
         }
       ]
